deploy/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: signoz-demo
  labels:
    app.kubernetes.io/part-of: signoz-demo
